feat: mise en production - hardening complet de l application (#74)
- application.yml: fusion du double bloc spring: (bug YAML), HikariCP pool,
  CORS driven par env, Actuator health expose
- application-prod.yml: nouveau profil prod avec JSON logging et pool etendu
- pom.xml: ajout spring-boot-starter-actuator
- SecurityConfig: CORS depuis CORS_ALLOWED_ORIGINS (env), /actuator/health public
- GlobalExceptionHandler: catch-all Exception avec logging SLF4J
- backend/Dockerfile: suppression mvnw inexistant, apk add maven propre,
  profil prod active par defaut en conteneur
- nginx.conf: proxy /api/ et /actuator/ vers backend:8080
- Angular environments: environment.ts + environment.prod.ts + fileReplacements
- docker-compose: healthcheck backend (wget /actuator/health), ANTHROPIC_API_KEY,
  CORS_ALLOWED_ORIGINS, SPRING_PROFILES_ACTIVE=prod, frontend depend_on healthy
- .env.example: ajout ANTHROPIC_API_KEY, CORS_ALLOWED_ORIGINS, DB_POOL_SIZE
- V43__performance_indexes: index statut/journal ecritures, axe analytique,
  utilisateurs actifs, lettrage date, comptes actifs par classe

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>